Do not recompile figures if they exist.

--- a/figs/Makefile
+++ b/figs/Makefile
@@ -1,23 +1,27 @@
 PLOTS := beta \
-				 binomial \
-				 chisquare \
-				 exponential \
-				 f \
-				 gamma \
-				 geometric \
-				 invgamma \
-				 lognormal \
-				 normal \
-				 pareto \
-				 poisson \
-				 student \
-				 uniform-continuous \
-				 uniform-discrete \
-				 weibull
+         binomial \
+         chisquare \
+         exponential \
+         f \
+         gamma \
+         geometric \
+         invgamma \
+         lognormal \
+         normal \
+         pareto \
+         poisson \
+         student \
+         uniform-continuous \
+         uniform-discrete \
+         weibull
 
 .PHONY: all clean
 
-all:
+# We'll take the first plot as indicator for all plots until the R script
+# allows for more fine-grained plot generation.
+all: beta.pdf
+
+%.pdf:
 	R --vanilla < distributions.R
 
 clean:
