--- a/figs/Makefile
+++ b/figs/Makefile
@@ -1,28 +1,11 @@
-PLOTS := beta \
-         binomial \
-         chisquare \
-         exponential \
-         f \
-         gamma \
-         geometric \
-         invgamma \
-         lognormal \
-         normal \
-         pareto \
-         poisson \
-         student \
-         uniform-continuous \
-         uniform-discrete \
-         weibull
-
 .PHONY: all clean
 
 # We'll take the first plot as indicator for all plots until the R script
 # allows for more fine-grained plot generation.
-all: beta.pdf
+all: beta-cdf.pdf
 
 %.pdf:
 	R --vanilla < distributions.R
 
 clean:
-	-rm -f $(PLOTS:=.pdf)
+	-rm -f *-*.pdf
