--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.bbl
 *.blg
 *.brf
+*.fls
 *.log
 *.out
 *.sw?
@@ -11,7 +12,3 @@
 figs/*
 !figs/relationships.pdf
 cookbook.pdf
-cookbook-??.*
-config.tex
-literature
-stat-cookbook.tar.gz
